# ControleAeronave

./: CMakeLists.txt  ControleAeronave.c  README.md  diagram.json  wokwi.toml
lib/: image.h  ssd1306.h
